--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,67 +1,31 @@
-<nav id="sidebar" class="collapse">
-	<button type="button" class="close" data-toggle="collapse" data-target="#sidebar" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	<ul class="sidebar-menu">
-		<%= render 'layouts/materials' %>
-	</ul>
-</nav>
+<nav id="main-nav" class="navbar navbar-expand-md navbar-light justify-content-between">
 		
-<nav id="masin-nav" class="navbar navbar-expand-lg navbar-light">
-	<!-- <div class="container"> -->
-			
-		<a href="/" class="navbar-brand"><%= fa_icon "home" %>
-			<span class=""><%= Settings.short_course_name %></span>
-			<span class="hidden-xs hidden-sm"><small><%= @group_name || @schedule_name %></small></span>
-		</a>
+	<a href="/" class="navbar-brand"><%= fa_icon "home", class: "" %>
+		<span class=""><%= Settings.short_course_name %></span>
+		<span class="hidden-xs hidden-sm"><small><%= @group_name || @schedule_name %></small></span>
+	</a>
 
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-nav" aria-controls="menu-nav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#current" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 			  
-		<!-- <div class="navbar-header">
-			<button type="button" class="sidebar-toggle collapsed visible-xs-inline-block" data-toggle="collapse" data-target="#sidebar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button> -->
-		<!-- </div> -->
-			
-		<div id="menu-nav" class="collapse navbar-collapse">
-			<ul class="navbar-nav">
-				<% if logged_in? && @schedule %>
-				<li class="nav-item dropdown hidden-xs">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Current <span class='caret'></span></a>
-					<div class="dropdown-menu">
-						<%= render 'layouts/schedule' %>
-					</div>
-				</li>
-				<% end %>
-				
-				<% if @sections_in_navbar.length > 0 %>
-				<%= render 'layouts/sections' %>
-				<% end %>
+	<div id="menu" class="collapse navbar-collapse">
+		<ul id="menu-nav" class="navbar-nav mr-auto">
+			<% if @sections_in_navbar.length > 0 %>
+			<%= render 'layouts/sections' %>
+			<% end %>
 
-				<% if @sections.length > 0 %>
-				<li class="nav-item dropdown hidden-xs">
-					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= (@sections_in_navbar.length > 0) ? "Other" : "Archive" %> <span class='caret'></span></a>
-					<div class="dropdown-menu">
-						<%= render 'layouts/materials' %>
-					</div>
-				</li>
-				<% end %>
-			</ul>
-		</div>
-
-		<ul id="icon-nav" class="navbar-nav navbar-right">
-			<% if !Settings.mail_address.blank? && logged_in? && (@alerts.count > 0 || @current_user.admin?) %>
-			<li class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "bell-o", class: "fa-fw" %></a>
-				<div class="dropdown-menu dropdown-menu-right">
-					<%= render 'layouts/alerts' %>
+			<% if @sections.length > 0 %>
+			<li class="nav-item dropdown hidden-xs">
+				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= (@sections_in_navbar.length > 0) ? "Other" : "Archive" %> <span class='caret'></span></a>
+				<div class="dropdown-menu">
+					<%= render 'layouts/materials' %>
 				</div>
 			</li>
 			<% end %>
+		</ul>
 
+		<ul id="icon-nav" class="navbar-nav">
 			<% if Settings.hands_allow && current_user.valid_profile? %>
 			<li class="nav-item dropdown" id="ama-nav">
 				<a href="#" id="ama-dd" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
@@ -71,38 +35,51 @@
 			</li>
 			<% end %>
 
-			<% if current_user.submits.any? %>
+			<% if logged_in? %>
 			<li class="nav-item dropdown">
-				<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn", class: "fa-fw" %></a>
-			</li>
-			<% end %>
-
-			<% if logged_in? and (current_user.assistant? or current_user.head? or current_user.admin?) %>
-			<li class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= fa_icon "tasks", class: "fa-fw" %></a>
+				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
 				<ul class="dropdown-menu dropdown-menu-right" id="user-menu">
 					<%= render 'layouts/menu' %>
 				</ul>
 			</li>
-				
-			<span class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></span>
-			<% elsif logged_in? %>
-			<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
 			<% elsif authenticated? %>
-			<li class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
-				<ul class="dropdown-menu" id="user-menu">
-					<%= render 'profile/edit' %>
-				</ul>
-			</li>
 			<% else %>
 			<li><%= link_to("Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
 			<% end %>
 		</ul>
-
-	<!-- </div> -->
+	</div>
 </nav>
 
+<div class="navbar bg-light navbar-expand-md justify-content-start">
+	<div id="current" class="collapse navbar-collapse">
+	<% if logged_in? && @schedule %>
+	<span class="navbar-text">
+		<%= fa_icon 'chevron-circle-left', style: 'color:#aaa' %>
+		<%= @schedule.name %>
+		<%= fa_icon 'chevron-circle-right', style: 'color:#aaa' %>
+	</span>
+	<ul class="navbar-nav">
+		<% schedule = @schedule %>
+		<% schedule.content.each do |item, link|  %>
+		<% next if item == 'description' %>
+		<% if link.nil? %>
+		<li class="nav-item"><%= link_to item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe, '#', class:"nav-link disabled" %></li>
+		<% elsif link == '---' %>
+		<!-- <li role="separator" class="divider"></li> -->
+		<% else %>
+		<li class="nav-item"><%= link_to item.sub('[', '<span class="badge">').sub(']', '</span>').html_safe, link, class:"nav-link" %></li>
+		<% end %>
+		<% end %>
+	</ul>
+	<% end %>
+	<span class="navbar-text">Other</span>
+	<ul class="navbar-nav">
+		<li class="nav-item"><a href="/" class="nav-link">Syllabus</a></li>
+		<li class="nav-item"><a href="/s" class="nav-link">Style Guide</a></li>
+	</ul>
+	</div>
+</div>
+	
 <% if logged_in? && current_user.student? && @schedule %>
 <nav id="secondary-nav" class="navbar navbar-default visible-xs-block">
 	<div class="container">
