--- a/app/views/timeline/_submit.html.erb
+++ b/app/views/timeline/_submit.html.erb
@@ -1,2 +1,2 @@
 <small><%= date_span_with_title(submit.created_at)%></small>
-<h4>You submitted <%= submit.pset.name %>!</h4>
+<h5 class="card-title">You submitted <%= submit.pset.name %>!</h5>
