--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,4 +1,4 @@
-.card
+#timeline .card, #timeline .list-group
 {
 	-webkit-box-shadow: 0px 0px 15px rgba(140, 152, 164, 0.125);
 	-moz-box-shadow: 0px 0px 15px rgba(140, 152, 164, 0.125);
