--- a/app/views/layouts/_materials.html.erb
+++ b/app/views/layouts/_materials.html.erb
@@ -10,6 +10,6 @@
 
 <h6 class="dropdown-header"><span><%= section.title %></span></h6>
 <% for page in section.pages %>
-	<%= link_to (page.title).html_safe, "/#{section.slug}/#{page.slug}", class: 'dropdown-item ' + (page.public ? '' : 'bg-warning') %>
+	<%= link_to (page.title).html_safe, "/#{section.slug}/#{page.slug}", class: 'dropdown-item ' + (page.public ? '' : 'menu-hidden') %>
 <% end %>
 <% end %>
