--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -2,7 +2,7 @@
 
 <div id="timeline" class="row" style="margin-bottom:2em">
 	<div class="col-sm-7">
-		<h3>Announcements</h3>
+		<!-- <h3>Announcements</h3> -->
 		<% @alerts.each do |item| %>
 		<div class="card">
 			<div class="card-body">
@@ -39,7 +39,7 @@
 			</div>
 			<% end %>
 		</div> -->
-		<h3>Submissions</h3>
+		<!-- <h3>Submissions</h3> -->
 		<% @items.each do |item| %>
 		<div class="card <%= "card-highlight" if item.updated_at > 1.week.ago %>">
 			<div class="card-body">
