--- a/app/views/timeline/timeline.html.erb
+++ b/app/views/timeline/timeline.html.erb
@@ -4,11 +4,11 @@
 	<div class="col-sm-7">
 		<!-- <h3>Announcements</h3> -->
 		<% @alerts.each do |item| %>
-		<div class="card">
-			<div class="card-body">
+		<!-- <div class="card">
+			<div class="card-body"> -->
 				<%= render partial: "timeline/#{item.class.to_s.downcase}", object: item %>
-			</div>
-		</div>
+			<!-- </div> -->
+		<!-- </div> -->
 		<% end %>
 	</div>
 
