--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -1,7 +1,7 @@
 body
 {
 	-webkit-font-smoothing: subpixel-antialiased;
-	line-height:1.2em;
+//    line-height:1.2em;
 	spadding-top:82px;
 	background-color:#f3f3f3;
 	background-size:cover;
@@ -13,21 +13,23 @@ body
  *
  */
 
-.alert
-{
-	margin-bottom:0;
-    border:0;
-    margin: 0 -2em;
-    padding: 1em 2em;
-}
+//.alert
+//{
+//    border:0;
+//    margin: 0 -2em;
+//    padding: 1em 2em;
+//}
 
 
 .alert
 {
-	border-radius:0;
-	border-top:none;
-	border-left:none;
-	border-right:none;
+    margin-bottom:0;
+
+    border-radius:0;
+
+    border-top:none;
+    border-left:none;
+    border-right:none;
 }
 
 
@@ -130,10 +132,6 @@ body
     table-layout:fixed;
 	margin-bottom:0 !important;
 	padding-bottom:2em;
-    margin-left: calc(-50vw + 50%);
-    padding-left: calc(50vw - 50%);
-    margin-right: calc(-50vw + 50%);
-    padding-right: calc(50vw - 50%);
 }
 
 
