--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -26,42 +26,48 @@
 
 <body>
 
-	<div class="container-fluid" style="height:100vh">
+	<div class="container-fluid" style="height:100vh; max-width:1366px">
 		<div class="row" style="height:100vh">
-			<div id="sidebar" class="col-md-3 p-4 fixed bg-dark text-light" style="overflow:scroll;">
+			
+			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column">
 				<%= render 'layouts/sidebar' %>
-				<%= render 'layouts/footer' %>
+			</div>
+			
+			<div id="row-content" class="col-md-9 p-0">
+	
+				<% if flash[:alert] %>
+				<div class="alert alert-danger alert-dismissible fade show">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<%= flash[:alert] %>
+				</div>
+				<% end %>
+
+				<% if flash[:notice] %>
+				<div class="alert alert-success alert-dismissible fade show">
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+					<%= flash[:notice] %>
+				</div>
+				<% end %>
 				
-			</div>
-			<div class="col-md-9 fixed p-0" style="overflow:scroll">
-	
-				<!-- <%= render 'layouts/navbar' %> -->
+				<% if @page and @submitted and date = @page.pset.submit_from(current_user).submitted_at %>
+				<div id="submitted_pset" class="alert alert-success">
+					You have submitted this problem set <%= time_ago_in_words(date) %> ago.
+				</div>
+				<% end %>
 
-				<div class="container">
-					<% if flash[:alert] %>
-					<div class="alert alert-danger alert-dismissible">
-						<button type="button" class="close" data-dismiss="alert">&times;</button>
-						<%= flash[:alert] %>
-					</div>
-					<% end %>
-
-					<% if flash[:notice] %>
-					<div class="alert alert-success alert-dismissible">
-						<button type="button" class="close" data-dismiss="alert">&times;</button>
-						<%= flash[:notice] %>
-					</div>
-					<% end %>
+				<div class="pull-right p-3">
+					<%= render 'layouts/float_nav' %>
 				</div>
 
-				<div id="content" class="container p-5">
+				<div id="content" class="p-3 p-sm-3 p-lg-5 px-lg-5">
 					<%= yield %>
+					<%= render 'layouts/footer' %>
 				</div>
-	
 			</div>
+			
 		</div>
 	</div>
-	
-	
+
 	<div id="popup"></div>
 	
 </body>
