--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,8 +13,10 @@
 
 	<ul class="nav pt-5">
 		<li><a href="/" class="nav-link">Announcements</a></li>
+		<% if Settings['links'] %>
 		<% Settings['links'].each do |title, url|  %>
 		<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
+		<% end %>
 		<% end %>
 	</ul>
 
