tweaks for new layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@ $color5: #F25D50;
 //$container-sm: auto;
 //$container-lg: 970px;
 
-$enable-gradients: true;
+//$enable-gradients: true;
 
 //@import "bootstrap-sprockets";
 @import "bootstrap";
