--- a/app/views/config/_dropbox.html.erb
+++ b/app/views/config/_dropbox.html.erb
@@ -1,9 +1,8 @@
-<h2>
+<h2 class="mb-0">
 	<%= octicon "package", height: 32, style: 'margin-right:0.25em;', class: 'dropcap'  %>
 	Dropbox
-	<br>
-	<small>Any student uploads will be placed in this Dropbox account.</small>
 </h2>
+<p>Any student uploads will be placed in this Dropbox account.</p>
 
 <p>
 	<% if @dropbox_linked %>
