--- a/app/views/config/_webhook.html.erb
+++ b/app/views/config/_webhook.html.erb
@@ -1,9 +1,8 @@
-<h2>
+<h2 class="mb-0">
 	<%= octicon "cloud-upload", height: 32, style: 'margin-right:0.25em;', class: 'dropcap'  %>
 	Webhook
-	<br>
-	<small>Download of course materials can be triggered by using this webhook.</small>
 </h2>
+<p>Download of course materials can be triggered by using this webhook.</p>
 
 <% if @secret.present? %>
 <p>
