--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,39 +1,59 @@
 <h1>Grade</h1>
 
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<strong><%= @submit.user.name %></strong> / <strong><%= @grade.submit.pset.name %></strong> <%= "/ #{@submit.used_login}" if @submit %> / <strong><%= @grade.status %></strong> / Graded by: <%= @grade.grader.name %>
-		<div class="pull-right">
-			<% @grade.subgrades.each_pair do |k,v| %>
-			<%= v %> /
-			<% end %>
-			<% if current_user.senior? %>
-			<strong><%= translate_grade(@grade.any_final_grade) %></strong>
-			<% end %>
-		</div>
-		<br>
-		Last submitted: 
-		<% if @submit and @submit.submitted_at %>
-		<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
-		<% else %>
-		never
-		<% end %> / 
-		First graded:
-		<% if @grade.persisted? %>
-		<%= time_ago_in_words(@grade.updated_at) %> ago
-		<% else %>
-		never
-		<% end %>
-		
-	</div>
-	<div class="panel-body">
-		<%= simple_markdown(@grade.comments) %>
-	</div>
+<strong><%= @submit.user.name %></strong> / <strong><%= @grade.submit.pset.name %></strong> <%= "/ #{@submit.used_login}" if @submit %> / <strong><%= @grade.status %></strong>
+
+<div class="pull-right">
+	<% @grade.subgrades.each_pair do |k,v| %>
+	<%= v %> /
+	<% end %>
+	<% if current_user.senior? %>
+	<strong><%= translate_grade(@grade.any_final_grade) %></strong>
+	<% end %>
 </div>
+
+<table class="table table-sm w-auto my-3">
+	<tr>
+		<td>Graded by:</td>
+		<td><%= @grade.grader.name %></td>
+	</tr>
+	<tr>
+		<td>First submitted:</td>
+		<td><%= @submit.created_at.to_formatted_s(:short) if @submit %></td>
+	</tr>
+	<tr>
+		<td>Last submitted:</td>
+		<td>
+			<% if @submit and @submit.submitted_at %>
+			<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
+			<% else %>
+			never
+			<% end %>
+		</td>
+	</tr>
+	<tr>
+		<td>First graded:</td>
+		<td>
+			<% if @grade.persisted? %>
+			<%= time_ago_in_words(@grade.updated_at) %> ago
+			<% else %>
+			never
+			<% end %>
+		</td>
+	</tr>
+	<% if @submit.url.present? %>
+	<tr>
+		<td>URL:</td>
+		<td><%= link_to @submit.url, @submit.url %></td>
+	</tr>
+	<% end %>
+</table>
+
+<%= simple_markdown(@grade.comments) %>
+
 
 <% if @grade.published? %>
 <%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: discuss_submits_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
 <% end %>
 <% if current_user.senior? && @submit.grade %>
-<%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
+<%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary' %>
 <% end %>
