--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -24,43 +24,53 @@
 </head>
 
 <body>
-	<%= render 'layouts/navbar' %>
-	<div id="content" class="container limit-width" style="padding:0">
-<% if flash[:alert] %>
-<div class="alert alert-danger alert-dismissible">
-	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<%= flash[:alert] %>
-</div>
-<% end %>
 
-<% if flash[:notice] %>
-<div class="alert alert-success alert-dismissible">
-	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<%= flash[:notice] %>
-</div>
-<% end %>
-		<%= form_tag({ controller: 'hands', action: 'search' }, method: 'get') do %>
-		<div class="col-md-12">
-			<p>
-				<div class="input-group">
-					<div class="input-group-btn">
-						<a class="btn btn-default" href="<%= url_for(controller: 'hands', action: 'index') %>"><i class="glyphicon glyphicon-chevron-left"></i></a>
-					</div>
-					<input type="text" class="form-control" placeholder="Search" name="term" id="term" required>
-					<div class="input-group-btn">
-						<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-					</div>
-				</div>
-			</p>
+	<div class="container-fluid" style="height:100vh; max-width:1366px">
+
+		<% if flash[:alert] %>
+		<div class="alert alert-danger alert-dismissible fade show">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			<%= flash[:alert] %>
 		</div>
 		<% end %>
 
-		<div class="col-md-12">
-		<%= yield %>
+		<% if flash[:notice] %>
+		<div class="alert alert-success alert-dismissible fade show">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			<%= flash[:notice] %>
+		</div>
+		<% end %>
+
+		<div class="row"" style="min-height:100vh"">
+			
+			<div id="content" class="p-1 col-md-12">
+				<div class="nav navbar-light justify-content-between">
+					<%= render 'layouts/brand' %>
+					<div class=" align-middle">
+						<%= render 'layouts/float_nav' %>
+					</div>
+				</div>
+
+				<%= form_tag({ controller: 'hands', action: 'search' }, method: 'get') do %>
+				<p>
+					<div class="input-group">
+						<div class="input-group-prepend">
+							<a class="btn btn-secondary" href="<%= url_for(controller: 'hands', action: 'index') %>"><%= fa_icon 'chevron-left' %></a>
+						</div>
+						<input type="text" class="form-control" placeholder="Search" name="term" id="term" required>
+						<div class="input-group-append">
+							<button class="btn btn-primary" type="submit"><%= fa_icon 'search' %></button>
+						</div>
+					</div>
+				</p>
+				<% end %>
+
+				<%= yield %>
+			</div>
+			
 		</div>
 	</div>
-	<%= render 'layouts/footer' %>
-	<div id="popup"></div>
+
 </body>
 
 </html>
