--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -1,75 +1,15 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<%= csrf_meta_tags %>
-
-	<title><%= title %></title>
-
+<% content_for :math do %>
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			showProcessingMessages: true,
 			extensions: [tex2jax]
 		});
 	</script>
-
-	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= mathjax_tag %>
-	<%= javascript_include_tag "application" %>
+<% end %>
 
-    <link rel="icon" type="image/png" href="/images/minor.png" />
-</head>
+<% content_for :footer do %>
+	<%= render 'layouts/footer' %>
+<% end %>
 
-<body>
-
-	<div class="container-fluid" style="height:100vh; max-width:1366px">
-		<div class="row" style="height:100vh">
-			
-			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column">
-				<%= render 'layouts/sidebar' %>
-			</div>
-			
-			<div id="row-content" class="col-md-9 p-0">
-	
-				<% if flash[:alert] %>
-				<div class="alert alert-danger alert-dismissible fade show">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:alert] %>
-				</div>
-				<% end %>
-
-				<% if flash[:notice] %>
-				<div class="alert alert-success alert-dismissible fade show">
-					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					<%= flash[:notice] %>
-				</div>
-				<% end %>
-				
-				<% if @page and @submitted and date = @page.pset.submit_from(current_user).submitted_at %>
-				<div id="submitted_pset" class="alert alert-success">
-					You have submitted this problem set <%= time_ago_in_words(date) %> ago.
-				</div>
-				<% end %>
-
-				<div class="pull-right p-3">
-					<%= render 'layouts/float_nav' %>
-				</div>
-
-				<div id="content" class="p-3 p-sm-3 p-lg-5 px-lg-5">
-					<%= yield %>
-					<%= render 'layouts/footer' %>
-				</div>
-			</div>
-			
-		</div>
-	</div>
-
-	<div id="popup"></div>
-	
-</body>
-
-</html>
+<%= render template: "layouts/application" %>
