--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="collapse sidebar-collapse" id="navbarTogglerDemo01">
 
-	<ul class="nav mt-5">
+	<ul class="nav mt-2 mt-md-5">
 		<li><a href="/" class="nav-link">Announcements</a></li>
 		<% if Settings['links'] %>
 		<% Settings['links'].each do |title, url|  %>
