--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
 
 <body>
 
-	<div class="container-fluid" style="height:100vh; max-width:1366px">
-		<div class="row" style="height:100vh">
+	<div class="container-fluid" style="max-width:1366px">
+		<div class="row" style="">
 			
 			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column navbar-dark">
 				<%= render 'layouts/brand'%>
@@ -53,7 +53,7 @@
 					<%= render 'layouts/float_nav' %>
 				</div>
 
-				<div id="content" class="p-3 p-sm-3 p-lg-5 px-lg-5">
+				<div id="content" class="p-3 p-md-4 p-sm-5 px-lg-5">
 					<%= yield %>
 				</div>
 
